cosmetic changes, changed the name, fixed bug that prevent app from connecting to blegatt, because the blegatt is not properly closed. Also added the destroy() in service to do gatt.close(). now the service can be properly stoped using stopService() command.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_hrdemo">Device Scan</string>
     <string name="online">Status: Online</string>
     <string name="offline">Status: Offline</string>
+    <string name="main_title">pRain - Posture tRainer</string>
 
 </resources>
